fixed scrolling overlap issue

--- a/css/style.css
+++ b/css/style.css
@@ -20,6 +20,7 @@ body {
   top: 0;
   left: 0;
   padding: 1%;
+  z-index: 1;
 }
 .logo {
 }
